# squad-api

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject-worker.toml  pyproject.toml
ansible/: extras.yml  inventory.yml  join-cluster.yml  site.yml
ansible/templates/: resolved.conf.j2
api/: config.py
api/storage/: base.py  memory.py  x.py
charts/: Chart.yaml  manifests.yaml  values.yaml
charts/templates/: _helpers.tpl  api-deployment.yaml  api-svc.yaml  execution-cr.yaml  execution-crb.yaml  execution-np.yaml  execution-sa.yaml  memcached-deployment.yaml  memcached-svc.yaml  opensearch-statefulset.yaml  opensearch-svc.yaml  redis-deployment.yaml  redis-np.yaml  x-searcher-deployment.yaml  x-streamer-deployment.yaml
migrations/: 20250122184608_secrets.sql  20250328080909_byok_key.sql  20250330131635_common_secrets.sql
squad/: agent_config.py  aiosession.py  api.py  auth.py  config.py  pagination.py  util.py
squad/account/: requests.py  router.py  schemas.py
squad/agent/: requests.py  response.py  router.py  schemas.py  templates.py
squad/agent_tool/: schemas.py
squad/data/: router.py  schemas.py
squad/database/: __init__.py  orms.py
squad/invocation/: event_listeners.py  events.py  execute.py  response.py  router.py  schemas.py
squad/secret/: requests.py  response.py  router.py  schemas.py
squad/storage/: base.py  memory.py  x.py
squad/tool/: brave.py  prompts.py  requests.py  response.py  router.py  schemas.py  validation.py  validator.py
squad/tool/builtin/: x.py  (+14 more)
squad/x/: router.py  router.py.old  searcher.py  streamer.py
