[tool.poetry]
name = "squad-api"
version = "0.0.1"
description = "Agents, on chutes.ai"
authors = ["Jon Durbin <jon@jondurbin.com>", "namoray <namoray@rayonlabs.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"
backoff = "^2.2.1"
requests = "^2.32.3"
loguru = "^0.7.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pybase64 = "^1.4.0"
orjson = "^3.10.10"
SQLAlchemy = "^2.0.36"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
setuptools = "^75.3.0"
pillow = "^11.0.0"
jinja2 = "^3.1.4"
pyjwt = "^2.10.1"
tweepy = "^4.14.0"
langdetect = "^1.0.9"
opensearch-py = {extras = ["async"], version = "^2.8.0"}
redis = "^5.2.1"
async-lru = "^2.0.4"
oauthlib = "^3.2.2"
munch = "^4.0.0"
aiocache = "^0.12.3"
fastapi-cache2 = "^0.2.2"
filetype = "^1.2.0"
pydub = "^0.25.1"
markdownify = "^0.14.1"
playwright = "^1.49.1"
beautifulsoup4 = "^4.12.3"
cryptography = "^44.0.0"
aioboto3 = "14.1.0"
python-multipart = "^0.0.20"
google-cloud-storage = "^2.19.0"
smolagents = {extras = ["openai"], version = "^1.11.0"}
kubernetes = "^32.0.0"
aiomcache = "^0.8.2"
transformers = "^4.48.2"
tiktoken = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
greenlet = "^3.1.1"
ipykernel = "^6.29.5"
typer = "^0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
